test/good/generics/any03.px

T' = 'T'

func f'<Any T'>(T' t') T' def
    return t'

print f'(T')
