test/bad/generics/def02.px

func f<Type T>() def
    return
